Fix spacing between group schedule and breadcrumb bar

--- a/awx/ui/client/src/inventories/manage/breadcrumbs/breadcrumbs.block.less
+++ b/awx/ui/client/src/inventories/manage/breadcrumbs/breadcrumbs.block.less
@@ -12,7 +12,7 @@
 .InventoryManageBreadCrumbs{
 	position: relative;
 	height: auto;
-	top: -40px;
+	top: -36px;
 	.BreadCrumb-list{
 		margin-bottom: 0px;
 	}
